- Adding to get methods in razor pages using /?handler= - Adding NotFound - Adding list of categories names using normal c# function - adding list of categories names using razor page injection

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@page
+﻿@page "{id:long?}"
 @model AspNet6Course.Pages.IndexModel
 @{
 }
 
 
-<h1>Razor Index</h1>
+<h1 class="m-5">Razor Index</h1>
 <h1>@Model.product.Name</h1>
