--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,23 +9,10 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row m-2">
-			<h2 class="text-white bg-info p-2">Product</h2>
-			<table class="table table-striped table-bordered">
-				<tbody>
-					<tr>
-						<th>Name</th>
-						<th>Price</th>
-						<th>CategoryID</th>
-					</tr>
-					<tr>
-						<td>@Model.Name</td>
-						<td>@Model.price.ToString("c")</td>
-						<th>@Model.CategoryId</th>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+	@*@await Component.InvokeAsync("ProductListing")*@
+
+	@*<vc:product-listing/>*@
+	<vc:vc-custom/>
 	</div>
 </body>
 </html>
