Making a ViewComponent act as a partial view but with much more power, it can return a list of products table like in index.cshtml (the table is found in the Default,cshtml)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,11 +8,15 @@
 	<title>Index</title>
 </head>
 <body>
+	<h1>This is my title</h1>
 	<div class="container">
 	@*@await Component.InvokeAsync("ProductListing")*@
 
 	@*<vc:product-listing/>*@
 	<vc:vc-custom/>
 	</div>
+
+	<h1>This is my ENDING</h1>
+
 </body>
 </html>
