--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>@ViewBag.Title</title>
 	<link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+	@*<script asp-src-include="/lib/jquery/**/*.js" asp-append-version="true"></script>*@
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" asp-fallback-src="/lib/jquery/jquery.min.js" asp-fallback-test="window.jQuery"></script>
 </head>
 <body>
 	<div class="container">
